feat: recent traefik ingress changes
